tests/spec/non_conformant/errors/import/miss/mixin/simple/inside.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/import/miss/mixin/simple/inside.hrx"

// Ignoring "test", error tests are not supported yet.
